// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataOverview.vue refresh page on second page 1`] = `
[MockFunction] {
  "calls": [
    [
      "pagination-next-button-clicked",
    ],
    [
      "table-refresh-button-clicked",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DataOverview.vue renders additional scoped slot 1`] = `
<table
  class="k-table has-hover is-clickable"
  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
>
  <thead
    class=""
  >
    <tr
      class=""
    >
      
      <th
        class=""
      >
        <span
          class="d-flex align-items-center"
        >
          
          <span
            class="sr-only"
          >
            custom
          </span>
          
          <!---->
        </span>
      </th>
      
    </tr>
  </thead>
  <tbody>
    
    <tr
      role="link"
      tabindex="0"
    >
      
      <td
        class=""
      >
        
        
        <ul>
          <li>
            test
          </li>
        </ul>
        
        
      </td>
      
    </tr>
    
  </tbody>
</table>
`;

exports[`DataOverview.vue renders all custom templates for data 1`] = `
<div
  class="data-overview"
  data-testid="data-overview"
>
  <div
    class="data-table-controls mb-2"
  >
    
    
    <button
      class="k-button medium rounded primary refresh-button"
      data-testid="data-overview-refresh-button"
      type="button"
    >
      
      <span
        class="k-button-icon kong-icon kong-icon-redo"
      >
        <svg
          fill="white"
          height="16"
          role="img"
          viewBox="0 0 17 14"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          
  
          <title>
            Redo
          </title>
          
  
          <path
            clip-rule="evenodd"
            d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
            fill="white"
            fill-rule="evenodd"
          />
          

        </svg>
        

      </span>
      
      
       Refresh 
      
      <!---->
    </button>
  </div>
  <div
    class="data-overview-content"
  >
    <!-- data -->
    <div
      class="data-overview-table"
    >
      <div
        class="k-table-container data-overview-table"
        data-testid="data-overview-table"
        is-clickable=""
      >
        <!---->
        <section
          class="k-table-wrapper"
        >
          <table
            class="k-table has-hover is-clickable"
            data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class="sr-only"
                    >
                      actions
                    </span>
                    
                    <!---->
                  </span>
                </th>
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class=""
                    >
                      Status
                    </span>
                    
                    <!---->
                  </span>
                </th>
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class=""
                    >
                      Total Updates
                    </span>
                    
                    <!---->
                  </span>
                </th>
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class=""
                    >
                      Kuma DP version
                    </span>
                    
                    <!---->
                  </span>
                </th>
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class=""
                    >
                      Envoy version
                    </span>
                    
                    <!---->
                  </span>
                </th>
                <th
                  class=""
                >
                  <span
                    class="d-flex align-items-center"
                  >
                    
                    <span
                      class="sr-only"
                    >
                      warnings
                    </span>
                    
                    <!---->
                  </span>
                </th>
                
              </tr>
            </thead>
            <tbody>
              
              <tr
                class="is-selected"
                role="link"
                tabindex="0"
              >
                
                <td
                  class=""
                >
                  
                  
                  
                </td>
                <td
                  class=""
                >
                  
                  <span
                    class="status status--with-title status--danger"
                    data-testid="status-badge"
                  >
                    <span
                      class=""
                    >
                      offline
                    </span>
                  </span>
                  
                </td>
                <td
                  class=""
                >
                  
                  <span>
                    1
                  </span>
                  
                </td>
                <td
                  class=""
                >
                  
                  <div
                    class=""
                  >
                    foo
                  </div>
                  
                </td>
                <td
                  class=""
                >
                  
                  <div
                    class=""
                  >
                    1.2
                  </div>
                  
                </td>
                <td
                  class="text-center"
                >
                  
                  <span
                    class="mr-1 kong-icon kong-icon-warning"
                  >
                    <svg
                      height="20"
                      role="img"
                      version="1.1"
                      viewBox="0 0 48 42"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      
  
                      <title>
                        Warning
                      </title>
                      
  
                      <g
                        fill="var(--black-500)"
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        
    
                        <g
                          id="icn-warning-64x"
                        >
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                            fill="var(--black-500)"
                            fill-rule="nonzero"
                            id="Triangle"
                          />
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                            fill="var(--yellow-300)"
                            fill-rule="nonzero"
                            id="Path"
                            type="secondary"
                          />
                          
      
                          <path
                            d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                            fill="var(--black-500)"
                            id="!"
                          />
                          
    
                        </g>
                        
  
                      </g>
                      

                    </svg>
                    

                  </span>
                  
                </td>
                
              </tr>
              
            </tbody>
          </table>
          <!---->
        </section>
      </div>
      <div
        class="pagination"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`DataOverview.vue renders basic snapshot 1`] = `
<div
  class="data-overview"
  data-testid="data-overview"
>
  <div
    class="data-table-controls mb-2"
  >
    
    
    <button
      class="k-button medium rounded primary refresh-button"
      data-testid="data-overview-refresh-button"
      type="button"
    >
      
      <span
        class="k-button-icon kong-icon kong-icon-redo"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 17 14"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          
  
          <title>
            Redo
          </title>
          
  
          <path
            clip-rule="evenodd"
            d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
            fill="#A3BBCC"
            fill-rule="evenodd"
          />
          

        </svg>
        

      </span>
      
      
       Refresh 
      
      <!---->
    </button>
  </div>
  <div
    class="data-overview-content"
  >
    <!-- data -->
    <div
      class="data-overview-table"
    >
      <div
        class="k-table-container data-overview-table"
        data-testid="data-overview-table"
        is-clickable=""
      >
        <!---->
        <!---->
      </div>
      <div
        class="pagination"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;
